# pleco-management

./: .gitignore  Cargo.toml  README.md  flash_all.xml
src/: db.rs  export.rs  import.rs  main.rs  openai_prompts.rs  translation.rs
