[package]
name = "chinesePracticeTool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
inquire = "0.9.1"
leptess = "0.14.0"
quick-xml = "0.38.3"
rand = "0.9.2"
regex = "1.11.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["full"] }
